<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">thesis</string>
    <string name="create_new">Create</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="enter_old_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="verify_new_password">Verify New Password</string>
    <string name="title_activity_edit_user">EditUser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_pattern">Change Lock Pattern</string>

</resources>
