<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_username" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/verify_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new" />

</LinearLayout>
